[package]
name = "path-follower"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
rtk-ins570-rs = { path = "../rtk-ins570-rs" }
pm1-sdk = { path = "../pm1-sdk-3" }
pm1-control-model = { path = "../pm1-control-model" }
pose-filter = { path = "../pose-filter" }
nalgebra = "*"
